# ThriveMessenger

./: .gitignore  README.md  UPSTREAM_PR_CHUNKS.md  client.conf  compile.cmd  compile_nuitka.cmd  compile_pyinstaller.cmd  copy.cmd  copy_nuitka_dist.cmd  copy_pyinstaller_dist.cmd  install.cmd  main.py  migrate.sh  omemo_plugin.py  pyproject.toml  requirements.txt  run.cmd  srv.conf  thrive_messenger_installer.iss  tmsg.py  vdata.yml  xmpp_client.py
.github/workflows/: build-macos.yml  build-windows.yml  deploy-server.yml  stage-server-shared.yml  upstream-parity-comment.yml  upstream-sync.yml
assets/help/: help_docs.json
assets/videos/: DESCRIPTIONS.txt  README.md
assets/videos/prompts/: admin-tools.txt  chat-and-files.txt  onboarding.txt
prosody/: deploy_modules.sh  prosody.cfg.lua  prosody.cfg.lua.testserver
prosody/modules/: mod_auth_thrive.lua  mod_thrive_admin.lua  mod_thrive_directory.lua  mod_thrive_reset.lua  verify_argon2.py
scripts/: add_video_descriptions_voiceover.sh  build_macos.sh  generate_help_docs_with_ollama.py  generate_local_promos.sh  generate_sora_promos.sh  import_external_promos.sh  release_gate.sh  upstream_parity_report.py
srv/: migrate_accounts.py  server.py  srv.conf
srv/scripts/: DEPLOY.md  deploy_and_restart.sh  deploy_hook_api.py  make_server_bundle.sh  sync_update_feed.sh
