[project]
name = "thrivemessenger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accessible-output2>=0.17",
    "keyring>=25.7.0",
    "nuitka>=4.0",
    "plyer>=2.1.0",
    "winotify>=1.1.0; sys_platform == 'win32'",
    "pyinstaller>=6.18.0",
    "pyinstaller-versionfile>=3.0.1",
    "wxpython>=4.2.5"
]
